--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form onsubmit="formsubmit(event)">
+		<label for="firstname">First Name:</label>
+		<input type="text" id="firstname">
+		<br>
+		<label for="lastname">Last Name:</label>
+		<input type="text" id="lastname">
+		<br>
+		<label for="PhoneNumber">Phone Number:</label>
+		<input type="tel" id="PhoneNumber">
+		<br>
+		<label for="Email">Email ID:</label>
+		<input type="email" id="Email">
+		<br>
+		<input type="submit" value="Submit" id="btn">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
