--- a/main.html
+++ b/main.html
@@ -10,16 +10,16 @@
 	<!-- the entire body must be written by student -->
 	<form onsubmit="formsubmit(event)">
 		<label for="firstname">First Name:</label>
-		<input type="text" id="firstname">
+		<input type="text" id="firstname" name="First Name">
 		<br>
 		<label for="lastname">Last Name:</label>
-		<input type="text" id="lastname">
+		<input type="text" id="lastname" name="Last Name">
 		<br>
 		<label for="PhoneNumber">Phone Number:</label>
-		<input type="tel" id="PhoneNumber">
+		<input type="tel" id="PhoneNumber" name="Phone Number">
 		<br>
 		<label for="Email">Email ID:</label>
-		<input type="email" id="Email">
+		<input type="email" id="Email" name="Email ID">
 		<br>
 		<input type="submit" value="Submit" id="btn">
 	</form>
